--- a/.github/workflows/devops-starter-workflow.yml
+++ b/.github/workflows/devops-starter-workflow.yml
@@ -13,6 +13,7 @@ env:
   HOSTINGPLANNAME: "SQA-DevOps-plan"
   APPINSIGHTLOCATION: "South Central US"
   SKU: "S1 Standard"
+  SONRA_HOST_UR: "http://20.222.83.217"
 
 jobs:
   Build:
@@ -35,7 +36,14 @@ jobs:
       run: |
         mkdir testresults
         pip install pytest && pytest Tests/unit_tests --junitxml=./testresults/test-results.xml && pip install pycmd && py.cleanup Tests/
-
+    
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - uses: sonarsource/sonarqube-scan-action@master
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOEKN }}
+    
     # Uploading unit test results to artifact store
     - name: Upload unit test results to Artifact
       continue-on-error: false
